fix(ME-83): Fixing Code
