# routes/auth.php
@@ -4,15 +4,9 @@ use App\Http\Controllers\Auth\AuthenticatedSessionController;
 use App\Http\Controllers\Auth\EmailVerificationNotificationController;
 use App\Http\Controllers\Auth\NewPasswordController;
 use App\Http\Controllers\Auth\PasswordResetLinkController;
-use App\Http\Controllers\Auth\RegisteredUserController;
 use App\Http\Controllers\Auth\VerifyEmailController;
-use App\Http\Controllers\Backoffice\Companies\CompaniesGetController;
 use App\Http\Controllers\Users\UserPostController;
 use Illuminate\Support\Facades\Route;
-
-Route::post('/register', [RegisteredUserController::class, 'store'])
-    ->middleware('guest')
-    ->name('register');
 
 Route::post('/login', [AuthenticatedSessionController::class, 'store'])
     ->middleware('guest')
@@ -41,7 +35,3 @@ Route::post('/logout', [AuthenticatedSessionController::class, 'destroy'])
 Route::post('/users', UserPostController::class)
     ->middleware('auth:sanctum')
     ->name('users');
-
-Route::get('/companies', CompaniesGetController::class)
-    ->middleware('auth:sanctum')
-    ->name('companies');
